@@ -1352,7 +1352,7 @@ while (!done)
 #if !defined NOINFOCHECK
       int old_first_char, old_options, old_count;
 #endif
-      int count, backrefmax, first_char, need_char;
+      int count, backrefmax, first_char, need_char, okpartial, jchanged;
       int nameentrysize, namecount;
       const uschar *nametable;
 
@@ -1365,6 +1365,8 @@ while (!done)
       new_info(re, NULL, PCRE_INFO_NAMEENTRYSIZE, &nameentrysize);
       new_info(re, NULL, PCRE_INFO_NAMECOUNT, &namecount);
       new_info(re, NULL, PCRE_INFO_NAMETABLE, (void *)&nametable);
+      new_info(re, NULL, PCRE_INFO_OKPARTIAL, &okpartial); 
+      new_info(re, NULL, PCRE_INFO_JCHANGED, &jchanged); 
 
 #if !defined NOINFOCHECK
       old_count = pcre_info(re, &old_options, &old_first_char);
@@ -1405,18 +1407,11 @@ while (!done)
           nametable += nameentrysize;
           }
         }
-
-      /* The NOPARTIAL bit is a private bit in the options, so we have
-      to fish it out via out back door */
+        
+      if (!okpartial) fprintf(outfile, "Partial matching not supported\n");
 
       all_options = ((real_pcre *)re)->options;
-      if (do_flip)
-        {
-        all_options = byteflip(all_options, sizeof(all_options));
-         }
-
-      if ((all_options & PCRE_NOPARTIAL) != 0)
-        fprintf(outfile, "Partial matching not supported\n");
+      if (do_flip) all_options = byteflip(all_options, sizeof(all_options));
 
       if (get_options == 0) fprintf(outfile, "No options\n");
         else fprintf(outfile, "Options:%s%s%s%s%s%s%s%s%s%s%s%s%s\n",
@@ -1433,6 +1428,8 @@ while (!done)
           ((get_options & PCRE_UTF8) != 0)? " utf8" : "",
           ((get_options & PCRE_NO_UTF8_CHECK) != 0)? " no_utf8_check" : "",
           ((get_options & PCRE_DUPNAMES) != 0)? " dupnames" : "");
+          
+      if (jchanged) fprintf(outfile, "Duplicate name status changes\n");
 
       switch (get_options & PCRE_NEWLINE_BITS)
         {
